Basic (non-perspective) crystal is working

--- a/_projects/2021-11-30-3d-in-canvas.md
+++ b/_projects/2021-11-30-3d-in-canvas.md
@@ -11,5 +11,7 @@ featured_image: "/images/subdiv/demo.png"
 
 <script type="module" src="{{ base.url | prepend: site.url }}/scripts/3d-in-canvas/main.js"></script>
 
+(reload page to see a new crystal)
+
 From example:
 https://github.com/mattdesl/canvas-sketch/blob/master/examples/canvas-geometric-3d.js
