Figured out how to fix the JS

--- a/_projects/2021-11-30-3d-in-canvas.md
+++ b/_projects/2021-11-30-3d-in-canvas.md
@@ -7,11 +7,10 @@ description: Everything in your computer-box eventually ends up in 2D anyways.
 featured_image: "/images/subdiv/demo.png"
 ---
 
-<canvas id="canvas" width="640" height="480"></canvas>
+<canvas id="canvas" style="width: 100%; height: 46vw;"></canvas>
 
 <script type="module" src="{{ base.url | prepend: site.url }}/scripts/3d-in-canvas/main.js"></script>
 
-(reload page to see a new crystal)
+_reload page for a random design_
 
-From example:
-https://github.com/mattdesl/canvas-sketch/blob/master/examples/canvas-geometric-3d.js
+Original idea by [Matt Deslauriers](https://www.mattdesl.com/) in his [Canvas Sketch Examples](https://github.com/mattdesl/canvas-sketch/blob/master/examples/canvas-geometric-3d.js)
