--- a/_projects/2021-11-30-3d-in-canvas.md
+++ b/_projects/2021-11-30-3d-in-canvas.md
@@ -4,7 +4,7 @@ title: "2+1D Canvas"
 subtitle: "3D in the canvas"
 date: 2021-11-30 00:00:00
 description: Everything in your computer-box eventually ends up in 2D anyways.
-featured_image: "/images/subdiv/demo.png"
+featured_image: "/images/subdiv/demo.jpg"
 ---
 
 <canvas id="canvas" style="width: 100%; height: 46vw;"></canvas>
