Finally cleaned this up

--- a/_projects/2021-11-15-subdivs.md
+++ b/_projects/2021-11-15-subdivs.md
@@ -4,7 +4,7 @@ title: "Subdivs"
 subtitle: "Study of an algorithm"
 date: 2021-11-15 00:00:00
 description: Original algorithm by Tyler Hobbs.
-featured_image: "/images/subdiv/demo.png"
+featured_image: "/images/thumbs/subdivs.jpg"
 ---
 
 Original [algorithm](https://tylerxhobbs.com/essays/2017/aesthetically-pleasing-triangle-subdivision) by Tyler Hobbs
