--- a/_projects/2021-11-30-canvas-3d.md
+++ b/_projects/2021-11-30-canvas-3d.md
@@ -1,15 +1,15 @@
 ---
 published: true
-title: "2+1D Canvas"
+title: "Canvas 3D"
 subtitle: "3D in the canvas"
 date: 2021-11-30 00:00:00
 description: Everything in your computer-box eventually ends up in 2D anyways.
-featured_image: "/images/subdiv/demo.jpg"
+featured_image: "/images/thumbs/canvas3d.jpg"
 ---
 
 <canvas id="canvas" style="width: 100%; height: 46vw;"></canvas>
 
-<script type="module" src="{{ base.url | prepend: site.url }}/scripts/3d-in-canvas/main.js"></script>
+<script type="module" src="{{ base.url | prepend: site.url }}/scripts/canvas-3d/main.js"></script>
 
 _reload page for a random design_
 
