--- a/_projects/2021-11-30-canvas-3d.md
+++ b/_projects/2021-11-30-canvas-3d.md
@@ -11,6 +11,10 @@ featured_image: "/images/thumbs/canvas3d.jpg"
 
 <script type="module" src="{{ base.url | prepend: site.url }}/scripts/canvas-3d/main.js"></script>
 
-_reload page for a random design_
+_tap `r` to randomize, `s` to save a frame_
 
 Original idea by [Matt Deslauriers](https://www.mattdesl.com/) in his [Canvas Sketch Examples](https://github.com/mattdesl/canvas-sketch/blob/master/examples/canvas-geometric-3d.js)
+
+## What's Going On Here?
+
+I would usually use WebGL to make something like this. The Canvas API with its 2D drawing functions was used instead to rasterize a generative 3D object. This exercise was a chance to better understand cameras, depth, and transforms.
