--- a/_projects/2021-11-30-canvas-3d.md
+++ b/_projects/2021-11-30-canvas-3d.md
@@ -17,4 +17,4 @@ Original idea by [Matt Deslauriers](https://www.mattdesl.com/) in his [Canvas Sk
 
 ## What's Going On Here?
 
-I would usually use WebGL to make something like this. The Canvas API with its 2D drawing functions was used instead to rasterize a generative 3D object. This exercise was a chance to better understand cameras, depth, and transforms.
+I would usually use WebGL to make something like this. The Canvas API with its 2D drawing functions was used instead to rasterize a generative 3D object. This exercise was a chance to better understand cameras, depth, and transforms. See if you can spot the rendering issue (hint: think "deeply").
